# rust-wallet

./: .gitignore  Cargo.toml  README.md  style.css
app/: Cargo.toml  README.md  build.rs  index.html  style.css
app/src/: app.rs  main.rs  rpc.rs  transactions.rs  wallet.rs
contracts/: package-lock.json  package.json
contracts/script/: Deploy.s.sol
contracts/src/: Diamond.sol  DiamondTBA.sol  IdentityNFT.sol  WalletFactory.sol
contracts/src/facets/: DiamondCutFacet.sol  DiamondLoupeFacet.sol  WalletFacet.sol
contracts/src/interfaces/: IERC173.sol
contracts/src/libraries/: LibDiamond.sol
src/: rpc.rs  transactions.rs  wallet.rs
tools/gen-wallet/: Cargo.toml
tools/gen-wallet/src/: main.rs
