[package]
name = "gen-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] } # Use rustls for safety/consistency
tokio = { version = "1", features = ["full", "macros"] }
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
